# tasc-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  about.toml  deny.toml
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-77581f42892db003cf549cfb69473b608f3c0a7c7d02fda582b1ef2a3407d4bf.json  query-7777f6dfad1e2485bedac392e3e638cfc3e2ef4488f2a013f9cc782db2ab30a2.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json
bruno/: bruno.json
bruno/Principal/: Create User.bru  Get Users.bru  Get by ID.bru  Login.bru  Root.bru
crates/agent/: Cargo.toml
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: user.rs
crates/principal/: .env  Cargo.toml  data_structure.md  docker-compose.yaml  local_config.toml
crates/principal/migrations/: 0001_create_users_table.up.sql
crates/principal/src/: config.rs  error.rs  main.rs  state.rs
crates/principal/src/auth/: handler.rs  handlers.rs  mod.rs  postgres.rs
crates/principal/src/db/: users.rs
crates/principal/src/user/: handler.rs  handlers.rs  mod.rs  postgres.rs
scripts/: start_principal_db.sh  start_principal_server.sh  stop_principal_db.sh
