[package]
name = "tasc-rs-common"
version.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
uuid = { version = "1.7", features = ["serde"] }
