[package]
name = "tasc-rs-principal"
version.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["tracing"] }
clap = { version = "4.5", features = ["cargo"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time", "tls-rustls", "uuid" ] }
tasc-rs-common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.7", features = ["v7"] }
